[project]
name = "email-triage-env"
version = "0.1.0"
description = "Email triage OpenEnv environment"
authors = [{name = "Shresth Raj"}]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"